tests/ui/parser/unicode-quote-chars.stderr
error: unknown start of token: \u{201c}
  --> $DIR/unicode-quote-chars.rs:2:14
   |
LL |     println!(“hello world”);
   |              ^
   |
help: Unicode characters '“' (Left Double Quotation Mark) and '”' (Right Double Quotation Mark) look like '"' (Quotation Mark), but are not
   |
LL -     println!(“hello world”);
LL +     println!("hello world");
   |

error: unknown start of token: \u{201d}
  --> $DIR/unicode-quote-chars.rs:2:26
   |
LL |     println!(“hello world”);
   |                          ^
   |
help: Unicode character '”' (Right Double Quotation Mark) looks like '"' (Quotation Mark), but it is not
   |
LL -     println!(“hello world”);
LL +     println!(“hello world");
   |

error: expected `,`, found `world`
  --> $DIR/unicode-quote-chars.rs:2:21
   |
LL |     println!(“hello world”);
   |                     ^^^^^ expected `,`

error: aborting due to 3 previous errors

